# flagger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  next.config.js  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build-docker.yml
crates/api/: Cargo.toml
crates/api/src/: context.rs  lib.rs  openapi.rs  server.rs
crates/api/src/services/: consumer_service.rs  management_service.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/serve/: api.rs  consumer.rs  management.rs  mod.rs
crates/controller/consumer/: Cargo.toml
crates/controller/consumer/src/: lib.rs
crates/controller/management/: Cargo.toml
crates/controller/management/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  database.rs  error.rs  flagger.rs  lib.rs
crates/core/src/controllers/: consumer_controller.rs  management_controller.rs  mod.rs
crates/database-adapter/: Cargo.toml
crates/database-adapter/src/: lib.rs
crates/entities/: Cargo.toml
crates/entities/src/: feature.rs  lib.rs
crates/impl/aws-identity-provider/: Cargo.toml
crates/impl/aws-identity-provider/src/: lib.rs
crates/impl/mongodb-adapter/: Cargo.toml
crates/impl/mongodb-adapter/src/: lib.rs
crates/impl/rocksdb-adapter/: Cargo.toml
crates/impl/rocksdb-adapter/src/: error.rs  lib.rs
crates/impl/sqlite-adapter/: Cargo.toml
crates/impl/sqlite-adapter/src/: lib.rs
crates/service/consumer/: Cargo.toml  build.rs
crates/service/consumer/src/: consumer_service.rs  lib.rs  server.rs
crates/service/management/: Cargo.toml
crates/service/management/src/: context.rs  lib.rs  management_service.rs  openapi.rs  server.rs
crates/types/: Cargo.toml
crates/types/src/: identity_provider.rs  lib.rs  repository.rs
lib/flagger-client/: context.ts  flagger.ts  index.ts  inner.ts
lib/flagger-client/controllers/: api-docs-controller.ts  index.ts  management-controller.ts
lib/flagger-client/entities/: feature.ts
proto/: consumer.proto
www/: main.ts  server.ts  tsconfig.json
www/components/atoms/: autocomplete.tsx  badge.tsx  button.tsx  color-scheme-icon.tsx  editor.tsx  index.ts  indicator.tsx  input.tsx  json-schema-form.tsx  label.tsx  modal.tsx  row.tsx  textarea.tsx
www/components/moleculas/: create-feature-editor.tsx  feature-card.tsx  index.ts  input-group.tsx
www/components/organisms/: command-palette.tsx  create-feature-form.tsx  create-feature.tsx  feature-list.tsx  index.ts  inspectable-form.tsx
www/components/templates/: application-template.tsx  index.ts
www/context/: index.ts  use-flagger-client.tsx
www/pages/: _app.tsx  _document.tsx  index.tsx
www/pages/feature/: index.tsx  new.tsx
www/store/: index.ts  types.ts  use-doc.ts  use-management.ts
www/styles/: globals.css
