[workspace]
members = [
    "crates/entities",
    "crates/database-adapter",
    "crates/core",
    "crates/controller/consumer",
    "crates/controller/management",
    "crates/impl/mongodb-adapter",
    "crates/impl/rocksdb-adapter",
    "crates/impl/sqlite-adapter",
    "crates/service/consumer",
    "crates/service/management",
    "crates/api",
    "crates/cli",
]