[package]
name = "flagger-api"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-suite = ["flagger-core/test-suite"]

[dependencies]
actix-cors = "0.6.1"
actix-web = "4"
flagger-core = { path = "../core", version = "0.1.0" }
flagger-entities = { path = "../entities", version = "0.1.0" }
flagger-types = { path = "../types", version = "0.1.0" }

[dev-dependencies]
actix-http = "3.2.1"
flagger-core = { path = "../core", version = "0.1.0", features = ["test-suite"] }
tokio = { version = "1.19.2", features = ["rt", "macros"] }
