[package]
name = "flagger-api"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-suite = ["flagger-core/test-suite"]

[dependencies]
actix-cors = "0.6.1"
actix-http = "3"
actix-web = { version = "4", default-features = false, features = ["macros"] }
flagger-core = { path = "../core", version = "0.1.0" }
flagger-consumer-controller = { path = "../controller/consumer", version = "0.1.0" }
flagger-entities = { path = "../entities", version = "0.1.0" }
flagger-management-controller = { path = "../controller/management", version = "0.1.0" }
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }

[dev-dependencies]
flagger-core = { path = "../core", version = "0.1.0", features = ["test-suite"] }
tokio = { version = "1.19.2", features = ["rt", "macros"] }
