[package]
name = "flagger-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flagger"
path = "./src/main.rs"

[features]
default = ["rocksdb"]
mongodb = ["flagger-mongodb-adapter"]
rocksdb = ["flagger-rocksdb-adapter"]
sqlite = ["flagger-sqlite-adapter"]

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
env_logger = "0.9.0"
flagger-api = { path = "../api", version = "0.1.0" }
flagger-core = { path = "../core", version = "0.1.0" }
flagger-consumer-service = { path = "../service/consumer", version = "0.1.0" }
flagger-management-service = { path = "../service/management", version = "0.1.0" }
flagger-mongodb-adapter = { path = "../impl/mongodb-adapter", version = "0.1.0", optional = true }
flagger-rocksdb-adapter = { path = "../impl/rocksdb-adapter", version = "0.1.0", optional = true }
flagger-sqlite-adapter = { path = "../impl/sqlite-adapter", version = "0.1.0", optional = true }
tokio = { version = "1.19.2", features = ["rt", "macros", "process"] }
