[package]
name = "flagger-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1" }
serde_json = { version = "1" }
utoipa = { git = "https://github.com/juhaku/utoipa", features = ["actix_extras"] }
